--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
         </div>
       </div>
     </div>
-    <div class="container border border-secondary btr w-75">
+    <div class="container-fluid border border-secondary btr w-75">
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active sl" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
@@ -248,42 +248,48 @@
         </div>
       </div>
     </div>
-   <div class="container">
-     <div class="row ms-3">
-       <div class="col ">
-        <div class="card" style="width: 20rem;">
-          <img src="./images/phonemaina.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text"><strong>Ract Js</strong> Project Phone MAnia a E-commerce website  which i have created as practice by including react with bootstrap</p>
+    <div class="container-fluid w-75">
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="./images/Textut.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">TextUtils</h5>
+              <p class="card-text">It is Website which Perform Various Operations On a Given Text and It also Include Dark Mode which i have Created Using React HOOK,s </p>
+            </div>
           </div>
         </div>
-       </div>
-       <div class="col mt-3">
-        <div class="card" style="width: 20rem;">
-          <img src="/images/Screenshot 2022-02-27 163016.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">TextUtils a react Website which Perform Various Operations on a given Text and it include a dark mode which i design using <strong>React</strong>  Hooks</p>
+        <div class="col ">
+          <div class="card">
+            <img src="./images/phonemaina.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Phone Mania</h5>
+              <p class="card-text">It is React Js Frontend Website which I created Using Bootstrap and react Js it include similar component like a e-commerce website </p>
+            </div>
           </div>
         </div>
-       </div>
-     </div>
-   </div>
-   <div class="container">
-     <div class="row ms-3 mt-4">
-       <div class="col "><div class="card" style="width: 20rem;">
-        <img src="./images/pmania2.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text"><strong>Tailwind CSS</strong> Project is Frontend Website which Name Is Similar to as my React Website i Created it to pdractice my Tailwind Siklls</p>
+        <div class="col">
+          <div class="card">
+            <img src="./images/fblogin.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Fb login Page Clone</h5>
+              <p class="card-text">It is also a Frontend  website but it is created by Using Tailwind CSS it is a clone of facebook login page which i have to design for enhance my skill </p>
+            </div>
+          </div>
         </div>
-      </div></div>
-       <div class="col mt-4"><div class="card" style="width: 20rem;">
-        <img src="./images/firstproject.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text"><strong>HTML CSS</strong> it is my first project in my web devlopment journey It is frontend website which i created using HTML and CSS</p>
+        <div class="col ">
+          <div class="card">
+            <img src="./images/firstproject.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Fitness Master</h5>
+              <p class="card-text">It is mY first Project which I created Using HTML CSS, it is Gym Website</p>
+            </div>
+          </div>
         </div>
-      </div></div>
-     </div>
-   </div>
+      </div>
+      
+
+    </div>
     
 
 
