--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/images/hackernak.png" class="d-block w-100" alt="...">
+          <img src="/images/hackernak.png" class="d-block w-75" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/images/codchefp.png" class="d-block w-100" alt="...">
+          <img src="/images/codchefp.png" class="d-block w-75" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/images/gfg.png" class="d-block w-100" alt="...">
+          <img src="/images/gfg.png" class="d-block w-75" alt="...">
         </div>
       </div>
 
@@ -254,8 +254,8 @@
           <div class="card">
             <img src="./images/Textut.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">TextUtils</h5>
-              <p class="card-text">It is Website which Perform Various Operations On a Given Text and It also Include Dark Mode which i have Created Using React HOOK,s </p>
+              <h4 class="card-title">TextUtils</h4>
+              <p class="card-text"><strong>It is Website which Perform Various Operations On a Given Text and It also Include Dark Mode which i have Created Using React HOOK,s</strong> </p>
             </div>
           </div>
         </div>
@@ -263,8 +263,8 @@
           <div class="card">
             <img src="./images/phonemaina.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Phone Mania</h5>
-              <p class="card-text">It is React Js Frontend Website which I created Using Bootstrap and react Js it include similar component like a e-commerce website </p>
+              <h4 class="card-title">Phone Mania</h4>
+              <p class="card-text"><strong>It is React Js Frontend Website which I created Using Bootstrap and react Js it include similar component like a e-commerce website </strong></p>
             </div>
           </div>
         </div>
@@ -272,8 +272,8 @@
           <div class="card">
             <img src="./images/fblogin.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Fb login Page Clone</h5>
-              <p class="card-text">It is also a Frontend  website but it is created by Using Tailwind CSS it is a clone of facebook login page which i have to design for enhance my skill </p>
+              <h4 class="card-title">Fb login Page Clone</h4>
+              <p class="card-text"><strong>It is also a Frontend  website but it is created by Using Tailwind CSS it is a clone of facebook login page which i have to design for enhance my skill </strong></p>
             </div>
           </div>
         </div>
@@ -281,8 +281,8 @@
           <div class="card">
             <img src="./images/firstproject.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Fitness Master</h5>
-              <p class="card-text">It is mY first Project which I created Using HTML CSS, it is Gym Website</p>
+              <h4 class="card-title">Fitness Master</h4>
+              <p class="card-text"><strong>It is mY first Project which I created Using HTML CSS, it is Gym Website</strong></p>
             </div>
           </div>
         </div>
