--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="skill mb-4">
               <div class="d-flex justify-content-between">
                 <h6 class="font-width-bold">JavaScript</h6>
-                <h6 class="font-width-bold">60%</h6>
+                <h6 class="font-width-bold">75%</h6>
               </div>
               <div class="progress">
                 <div class="progress-bar progress-bar-striped  bg-primary" role="progressbar" style="width: 60%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
@@ -159,7 +159,7 @@
               <div class="skill mb-4">
                 <div class="d-flex justify-content-between">
                   <h6 class="font-width-bold">React.Js</h6>
-                  <h6 class="font-width-bold">65%</h6>
+                  <h6 class="font-width-bold">70%</h6>
                 </div>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 50%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
@@ -188,8 +188,8 @@
               </div>
               <div class="skill mb-4">
                 <div class="d-flex justify-content-between">
-                  <h6 class="font-width-bold">Tailwind CSS</h6>
-                  <h6 class="font-width-bold">80%</h6>
+                  <h6 class="font-width-bold">React Native</h6>
+                  <h6 class="font-width-bold">60%</h6>
                 </div>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 88%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
@@ -219,7 +219,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/images/hackernak.png" class="d-block w-75" alt="...">
+          <img src="/images/HackerankS.jpg" class="d-block w-75" alt="...">
         </div>
         <div class="carousel-item">
           <img src="/images/codchefp.png" class="d-block w-75" alt="...">
@@ -261,7 +261,7 @@
         </div>
         <div class="col ">
           <div class="card">
-            <img src="./images/phonemaina.png" class="card-img-top" alt="...">
+            <img src="./images/third.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h4 class="card-title">Phone Mania</h4>
               <p class="card-text"><strong>It is React Js Frontend Website which I created Using Bootstrap and react Js it include similar component like a e-commerce website </strong></p>
@@ -279,7 +279,7 @@
         </div>
         <div class="col ">
           <div class="card">
-            <img src="./images/firstproject.png" class="card-img-top" alt="...">
+            <img src="./images/netflix.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h4 class="card-title">Fitness Master</h4>
               <p class="card-text"><strong>It is mY first Project which I created Using HTML CSS, it is Gym Website</strong></p>
