--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
           <div class="card">
             <img src="./images/netflix.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h4 class="card-title">Fitness Master</h4>
-              <p class="card-text"><strong>It is mY first Project which I created Using HTML CSS, it is Gym Website</strong></p>
+             <h4 class="card-title">Netflix Clone</h4>
+              <p class="card-text"><strong>Netflix clone is Frontend Website which render information using real Time ApI In which Advance Hooks and React Routers were used</strong></p>
             </div>
           </div>
         </div>
