--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <h2 class="text-white font-weight-normal mb-3 ">Programmar</h2>
                     </div>
                     <div class="d-flex align-items-center justify-content-center justify-conter-lg-start pt-6">
-                        <a href="" class="btn btn-white mr-4 ">Download CV</a>
+                        <a href="https://drive.google.com/file/d/1-mndR6PFnouJM8ltH0BYKBwUrx9i_T4J/view" class="btn btn-white mr-4 ">Download CV</a>
                         <a href="" class="btn btn-blue d-sm-block">About Me</a>
                     </div>
                 </div>
